# beaver_gpu

./: CMakeLists.txt  README.md
beaver_torch/: beaver_ext.cu  beaver_offload.py  gpufs_ext.cu  gpufs_offload.py  setup.py  setup_gpufs.py
beaver_torch/beaver_ext.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
benchmarks/: CMakeLists.txt  baseline_basic.cu  baseline_beaver.cu  baseline_cufile.cu  baseline_pmem.cu  bench_config.h  bench_utils.h  e2_prefetch_bench.cu  e2_results.txt  e2e_res.txt  microbench.cu  microbench_results.txt  perf_benchmark.cu  rawgpm_bench.cu  rawgpm_results.txt  results.txt  results_batched.txt  workload_kernels.cuh
examples/: CMakeLists.txt  beaver_cow_simple_test.cu  beaver_cow_test.cu  gpm_hello_world.cu  standalone_real_test.cu
include/: beaver_cow.h  ddio.h  f2fs_types.h  gpm_interface.cuh  gpu_f2fs.h  gpu_f2fs_ckpt.h  gpu_vfs.h
src/core/: beaver_cow.cu  beaver_f2fs.cu  gpm_interface.cu  gpu_f2fs.cu  gpu_f2fs_ckpt.cu
tests/: CMakeLists.txt  cow_kernel_test.cu  ddio_helper.cpp  f2fs_kernel_test.cu  gpm_direct_pm_test.cu  gpm_large_register_test.cu
